<resources>
    <string name="app_name">toyProject</string>
    <string name="button1">X</string>
    <string name="imageButton">사진 추가 버튼</string>
    <string name="editTextTitle">제목</string>
    <string name="textView1">거래 방식</string>
    <string name="radioButton1">판매</string>
    <string name="radioButton2">나눔/기부</string>
    <string name="editTextPrice">가격</string>
    <string name="textView2">내용</string>
    <string name="editTextDetail">내용을 입력하세요.</string>
    <string name="button2">작성</string>
    <string name="name">진준문고</string>
    <string name="pr">가격</string>
    <string name="chNick">• 닉네임 변경</string>
    <string name="chPw">• 비밀번호 변경</string>
    <string name="logout">• 로그아웃</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school">학교/학과</string>
    <string name = "subname">우리 동네 중고 책</string>
    <string-array name="spinner_university">
        <item>성결대학교 </item>
        <item>서울대학교</item>
        <item>고려대학교</item>
    </string-array>

    <string-array name="spinner_university_sungkyul">
        <item>성결과1</item>
        <item>성결과2</item>
        <item>성결과3</item>
    </string-array>

    <string-array name="spinner_university_seoul">
        <item>서울과1</item>
        <item>서울과2</item>
        <item>서울과3</item>
    </string-array>

    <string-array name="spinner_university_korea">
        <item>고려과1</item>
        <item>고려과2</item>
        <item>고려과3</item>
    </string-array>

    <string-array name="spinner_grade">
        <item>1학년</item>
        <item>2학년</item>
        <item>3학년</item>
        <item>4학년</item>
    </string-array>
</resources>