<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".PostBoard">

    <android.widget.Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#8E73BF"
        android:text="@string/button1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="410dp"
        android:layout_height="730dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:contentDescription="@string/imageButton"
                android:onClick="addImage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/camera_icon" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="68dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintStart_toEndOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/alert_light_frame" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/memo_border"
                android:ems="10"
                android:hint="@string/editTextTitle"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#808080"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/textView1"
                android:text="@string/textView1"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButton1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioButton2" />

            </RadioGroup>

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="370dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/memo_border"
                android:ems="10"
                android:hint="@string/editTextPrice"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#808080"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/textView2"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

            <EditText
                android:id="@+id/editTextDetail"
                android:layout_width="370dp"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/memo_border"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/editTextDetail"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#808080"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Spinner
                    android:id="@+id/spinner_university"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="0" />

                <Spinner
                    android:id="@+id/spinner_department"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="0" />

                <Spinner
                    android:id="@+id/spinner_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="0" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <android.widget.Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#8E73BF"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>