<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/userInfo_iv_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userInfo_tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Nick"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/userInfo_iv_profile"
            app:layout_constraintStart_toEndOf="@id/userInfo_iv_profile"
            app:layout_constraintTop_toTopOf="@id/userInfo_iv_profile" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/userInfo_iv_profile" />

        <Button
            android:id="@+id/userInfo_tv_chNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="#00ff0000"
            android:minHeight="48dp"
            android:text="@string/chNick"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userInfo_tv_nickname" />

        <Button
            android:id="@+id/userInfo_tv_chPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ff0000"
            android:minHeight="48dp"
            android:text="@string/chPw"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/userInfo_tv_chNick"
            app:layout_constraintTop_toBottomOf="@id/userInfo_tv_chNick" />

        <Button
            android:id="@+id/userinfo_tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ff0000"
            android:minHeight="48sp"
            android:text="@string/logout"
            android:textColor="#E91E63"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/userInfo_tv_chPw"
            app:layout_constraintTop_toBottomOf="@id/userInfo_tv_chPw" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>